# data-designer-slop-guard

./: README.md  pyproject.toml
src/data_designer_slop_guard/: __init__.py  config.py  core.py  generator.py  plugin.py
tests/: test_core.py
