[project]
name = "data-designer-slop-guard"
version = "0.1.0"
description = "Slop Guard plugin for NeMo Data Designer — regex-based AI prose linter"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "data-designer-config",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_designer_slop_guard"]

[project.entry-points."data_designer.plugins"]
slop-guard = "data_designer_slop_guard.plugin:slop_guard_plugin"
